# speaker_verification

./: README.md
speaker_verification/: demo.py  pyproject.toml
speaker_verification/tests/: test_speaker_verification.py
