[tool.poetry]
name = "speaker_verification"
version = "0.1.0"
description = ""
authors = ["Abhilash <abhilashbabuj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
streamlit = "^1.3.1"
fastdtw = "^0.3.4"
librosa = "^0.8.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
